fixed: Crash if EPG timeline is selected with more as 500 channels changed: increased max timeline channels and days fixed: compiler warnings inside cEPGGridContainer fixed: RequestRecordingsList returns always with error fixed: radio flag was not set for radio channels by VNSI client fixed: Initial loading of EPG and channels takes a long long time, (TV Database improved) fixed: VNSI client don't transfer connection name correct on login fixed: XBMC load timers with SupportTimers false for clients (is wrong) fixed: VNSI client SupportTimers flag was wrongly false fixed: Compiler warning inside cPVRTimerInfoTag fixed: Recording button was not highlighted if a instand recording was started
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@29706 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1731,6 +1731,7 @@
   <string id="19212">List contains changes</string>
   <string id="19213">Select channel client</string>
   <string id="19214">Enter a valid URL for the new channel</string>
+  <string id="19215">The PVR-Server don't support Timers!</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
