--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1825,6 +1825,7 @@
   <string id="19212">Liste enthält Änderungen</string>
   <string id="19213">Wählen Sie die Kanalquelle</string>
   <string id="19214">Bitte geben Sie eine URL für den Kanal ein</string>
+  <string id="19215">Der PVR-Server unterstützt keine Timer!</string>
 
   <string id="19499">Andere/Unbekannt</string>
   <string id="19500">Movie/Drama</string>
