--- a/addons/skin.confluence/language/Dutch/strings.xml
+++ b/addons/skin.confluence/language/Dutch/strings.xml
@@ -24,7 +24,8 @@
   <string id="31029">Fanart</string>
   <string id="31030">Volledige Lijst</string>
   <string id="31031">Pic Thumbs</string>
-  <string id="31032">Image Wrap</string>
+  <string id="31032">Image omslag</string>
+  <string id="31032">Info</string>
 
   <!-- Extra labels -->
   <string id="31040">Afspelen</string>
@@ -58,8 +59,8 @@
   <string id="31106">Diverse opties</string>
   <string id="31107"></string>
   <string id="31108">Verberg Hoofd Menu Knoppen</string>
-  <string id="31109">Beginscherm achtergronden</string>
-  <string id="31110">Pas Achtergrond aan voor Hoofd Knop</string>
+  <string id="31109">Media achtergronden</string>
+  <string id="31110">Pas Achtergrond aan voor media type</string>
   <string id="31111">Verbergen</string>
   <string id="31112">Opties</string>
   <string id="31113">Enkele Afbeelding</string>
