--- a/language/Chinese (Simple)/strings.xml
+++ b/language/Chinese (Simple)/strings.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!--$Revision$-->
-<!--Based on english strings version 28418 -->
+<!--Based on english strings version 29913 -->
 <strings>
   <string id="0">程序</string>
   <string id="1">图片</string>
@@ -503,6 +503,7 @@
   <string id="571">默认</string>
   <string id="572">制作公司</string>
   <string id="573">路径</string> 
+  <string id="574">国家</string>
   
   <string id="580">排序方向</string>
   <string id="581">排序方法</string>
@@ -731,6 +732,7 @@
   <string id="1048">- 用户名</string>
   <string id="1049">脚本设置</string>
   <string id="1050">单曲</string>
+  <string id="1051">输入网页地址</string>
 
   <string id="1200">SMB 共享设置</string>
   <string id="1202">工作组</string>
@@ -840,6 +842,7 @@
   <string id="10018">设置-&gt;网络设置</string>
   <string id="10019">设置-&gt;用户界面</string>
   <string id="10020">脚本</string>
+  <string id="10021">网页浏览器</string>
 
   <string id="10028">视频/播放列表</string>
   <string id="10034">设置-&gt;用户配置</string>
@@ -989,6 +992,8 @@
   <string id="13023">成功移除设备</string>
   <string id="13024">游戏手柄插入</string>
   <string id="13025">游戏手柄拔出</string>
+
+  <string id="13050">电池电量不足</string>
 
   <string id="13100">闪烁过滤</string>
   <string id="13101">使用驱动选择(需要重启)</string>
@@ -1211,7 +1216,11 @@
   <string id="13422">开始幻灯片播放</string>
   <string id="13423">记住此目录</string>
   <string id="13424">使用象素缓冲对象</string>
-  <string id="13425">Crystal HD 硬解码</string>
+  <string id="13425">允许硬件加速（VDPAU）</string>
+  <string id="13426">允许硬件加速（VAAPI）</string>
+  <string id="13427">允许硬件加速（DXVA2）</string>
+  <string id="13428">允许硬件加速（CrystalHD）</string>
+  <string id="13429">允许硬件加速（VDADecoder）</string>
 
   <string id="13500">影音同步方式</string>
   <string id="13501">音频时钟</string>
@@ -1709,6 +1718,7 @@
   <string id="20250">舞会模式！(视频)</string>
   <string id="20251">鸡尾酒(视频)</string>
   <string id="20252">填入玻璃(视频)</string>
+  <string id="20255">首次登录，编辑您的用户配置</string>
 
   <string id="20300">WEB服务器目录(HTTP)</string>
   <string id="20301">WEB服务器目录(HTTPS)</string>
@@ -1861,6 +1871,7 @@
   <string id="20448">无法下载信息</string>
   <string id="20449">服务器不可用。</string>
   <string id="20450">要继续扫描吗？</string>
+  <string id="20451">国家</string>
   <!-- up to 21329 is reserved for the video db !! !-->
 
   <string id="21330">显示隐藏文件和目录</string>
@@ -2103,36 +2114,61 @@
   <!-- strings 24000 thru 24299 reserved for the addons framework -->
   <string id="24000">扩展功能</string>
   <string id="24001">扩展功能</string>
+  <string id="24002">扩展功能选项</string>
+  <string id="24003">扩展功能信息</string>
 
   <string id="24005">插件</string>
   <string id="24007">刮削器</string>
   <string id="24008">屏幕保护</string>
   <string id="24009">脚本</string>
   <string id="24010">可视化效果</string>
+  <string id="24011">扩展功能库</string>
 
-  <string id="24020">设置扩展功能</string>
-  <string id="24021">禁用扩展功能</string>
-  <string id="24022">启用扩展功能</string>
+  <string id="24020">设置</string>
+  <string id="24021">禁用</string>
+  <string id="24022">启用</string>
   <string id="24027">天气服务</string>
   <string id="24028">Weather.com（标准）</string>
   <string id="24030">此扩展功能不可设置</string>
   <string id="24031">读取配置错误</string>
+  <string id="24032">全部库</string>
+  <string id="24033">库</string>
+  <string id="24034">检查更新</string>
+  <string id="24035">强制刷新</string>
+  <string id="24036">更新日志</string>
 
   <string id="24050">可用扩展功能</string>
   <string id="24051">版本：</string>
-  <string id="24052">免责声明：</string>
+  <string id="24052">免责声明</string>
   <string id="24053">许可证：</string>
-  <string id="24059">要安装此扩展功能吗？</string>
+  <string id="24059">要启用此扩展功能吗？</string>
+  <string id="24060">要禁用此扩展功能吗？</string>
+  <string id="24061">扩展功能有可用更新！</string>
+  <string id="24062">已启用扩展功能</string>
+  <string id="24063">自动更新</string>
+  <string id="24064">扩展功能已启用</string>
+  <string id="24065">扩展功能已更新</string>
+  <string id="24066">取消扩展功能下载？</string>
+  <string id="24067">当前下载扩展功能</string>
+  <string id="24068">可更新</string>
+  <string id="24069">更新</string>
 
   <string id="24070">扩展功能不可用</string>
   <string id="24071">发生未知错误</string>
   <string id="24072">需要先进行设置</string>
   <string id="24073">无法连接</string>
   <string id="24074">需要重新启动</string>
+  <string id="24075">禁用</string>
   <string id="24080">尝试重新连接？</string>
   <string id="24089">重新启动扩展功能</string>
 
   <string id="24090">锁定扩展功能管理器</string>
+
+  <string id="24091"></string>
+  <string id="24092"></string>
+  <string id="24093"></string>
+  <string id="24094"></string>
+  <string id="24095"></string>
 
   <!-- strings 29800 thru 29998 reserved strings used only in the default Project Mayhem III skin and not c++ code -->
   <string id="29800">资料库模式</string>
@@ -2222,7 +2258,8 @@
   <string id="34000">Lame</string>
   <string id="34001">Vorbis</string>
   <string id="34002">Wav</string>
-  <string id="34003">DXVA</string>
+  <string id="34003">DXVA2</string>
+  <string id="34004">VAAPI</string>
 
   <string id="34100">扬声器设置</string>
   <string id="34101">2.0</string>
