--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -819,6 +819,9 @@
   <string id="2050">Runtime</string>
 
   <string id="2100">Script failed! : %s</string>
+  <string id="2101">Newer version needed - See log</string>
+  <string id="2102">Graphics Card</string>
+  <string id="2103">Requirements not met - See log</string>
 
   <string id="4501">Enable LCD/VFD</string>
 
