--- a/addons/skin.pm3-hd/language/English/strings.xml
+++ b/addons/skin.pm3-hd/language/English/strings.xml
@@ -84,6 +84,8 @@
   <string id="31116">Hide Video flag images in media views</string>
 
   <string id="31118">Show Fanart in main panel background</string>
+  <string id="31119">Hide Main Menu Buttons</string>
+  <string id="31120">Hide</string>
 
   <!-- Script Settings labels -->
   <string id="31200">Custom script options</string>
