--- a/addons/skin.pm3-hd/language/English/strings.xml
+++ b/addons/skin.pm3-hd/language/English/strings.xml
@@ -2,9 +2,9 @@
 <strings>
   <string id="31000">Volume muted</string>
   <string id="31001">Working...</string>
-  <string id="31002"></string>
-  <string id="31003"></string>
-  <string id="31004"></string>
+  <string id="31002">Up One Level</string>
+  <string id="31003">Previous Window</string>
+  <string id="31004">Home</string>
   <string id="31005"></string>
   <string id="31006"></string>
   <string id="31007"></string>
