Fixed : [PVR][PM3.HD] language file (whoops forgot to hit save)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@30510 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/addons/skin.pm3-hd/language/English/strings.xml
+++ b/addons/skin.pm3-hd/language/English/strings.xml
@@ -5,9 +5,6 @@
   <string id="31002">Up One Level</string>
   <string id="31003">Previous Window</string>
   <string id="31004">Home</string>
-  <string id="31002">Live TV</string>
-  <string id="31003">Timer</string>
-  <string id="31004"></string>
   <string id="31005"></string>
   <string id="31006"></string>
   <string id="31007"></string>
@@ -109,4 +106,8 @@
 
   <!-- AMT Script Extra labels -->
   <string id="31300">Show cast</string>
+
+  <!-- PVR Labels -->
+  <string id="31400">Live TV</string>
+  <string id="31401">Timer</string>
 </strings>
