added: "Get More" button to skin.setaddon which shows the repositories in the addonmanager
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@30636 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1984,6 +1984,7 @@
   <string id="21449">Remote control sends keyboard presses</string>
   <string id="21450">- Edit</string>
   <string id="21451">Internet connection required.</string>
+  <string id="21452">Get More</string>
 
   <string id="21800">File name</string>
   <string id="21801">File path</string>
