--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -682,7 +682,7 @@
   <string id="851">Valid port range is 1-65535</string>
   <string id="852">Valid port range is 1024-65535</string>
 
-  <string id="1000">Screensaver preview</string>
+  <string id="1000">- Preview</string>
   <string id="1001">Unable to connect</string>
   <string id="1002">XBMC was unable to connect to the network location.</string>
   <string id="1003">This could be due to the network not being connected.</string>
