changed: Allow addons to be disabled/enabled and installed/uninstalled from the addon information dialog.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@30735 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2149,6 +2149,8 @@
   <string id="24034">Check for updates</string>
   <string id="24035">Force refresh</string>
   <string id="24036">Change log</string>
+  <string id="24037">Uninstall</string>
+  <string id="24038">Install</string>
 
   <string id="24050">Available Add-ons</string>
   <string id="24051">Version:</string>
