--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2151,6 +2151,7 @@
   <string id="24036">Change log</string>
   <string id="24037">Uninstall</string>
   <string id="24038">Install</string>
+  <string id="24039">Disabled Add-ons</string>
 
   <string id="24050">Available Add-ons</string>
   <string id="24051">Version:</string>
