added: ticket #9328 - New Weather string - Moderate
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@30761 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -810,6 +810,7 @@
   <string id="1417">Grains</string>
   <string id="1418">T-Storms</string>
   <string id="1419">T-Showers</string>
+  <string id="1420">Moderate</string>
 
   <!-- strings through to 1450 reserved for weather translation -->
 
