--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2128,20 +2128,23 @@
   <string id="24003">Add-on Information</string>
 
   <string id="24005">Plugin</string>
-  <string id="24007">Scraper</string>
+  <string id="24007">Movie information</string>
   <string id="24008">Screensaver</string>
   <string id="24009">Script</string>
   <string id="24010">Visualization</string>
   <string id="24011">Add-on repository</string>
-  <string id="24012">Subtitle service</string>
-  <string id="24013">Lyrics service</string>
-  <string id="24014">Script Library</string>
+  <string id="24012">Subtitles</string>
+  <string id="24013">Lyrics</string>
+  <string id="24014">TV information</string>
+  <string id="24015">Musicvideo information</string>
+  <string id="24016">Album information</string>
+  <string id="24017">Artist information</string>
 
   <string id="24020">Configure</string>
   <string id="24021">Disable</string>
   <string id="24022">Enable</string>
   <string id="24023">Add-on disabled</string>
-  <string id="24027">Weather service</string>
+  <string id="24027">Weather</string>
   <string id="24028">Weather.com (standard)</string>
   <string id="24030">This Add-on can not be configured</string>
   <string id="24031">Error loading settings</string>
